chấm công, tính lương , tuyển dụng
cập nhật thêm portal, debug chấm công, tính lương